--- a/index.html
+++ b/index.html
@@ -17,7 +17,30 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
+    <div class="card">
+      <div class="card-main">
+        <img src="./images/image-victor.jpg" alt="victor photo" class="photo" />
+        <p class="name">
+          Victor Crest
+          <span class="age">26</span>
+        </p>
+        <span class="city">London</span>
+      </div>
+      <div class="card-footer">
+        <div class="social">
+          <p class="status">80K</p>
+          <span class="social-label">Followers</span>
+        </div>
+        <div class="social">
+          <p class="status">803K</p>
+          <span class="social-label">Likes</span>
+        </div>
+        <div class="social">
+          <p class="status">1.4K</p>
+          <span class="social-label">Photos</span>
+        </div>
+      </div>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
